修改部分显示逻辑，进度条新增白色背景

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "upload-progress-controller",
+    "name": "kowaii-uploader",
     "version": "0.1.0",
     "private": true,
     "scripts": {
